# atomic_habits_DRF

./: .env_sample  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
config/: settings.py  urls.py
habits/: admin.py  models.py  paginators.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_alter_habit_related_habit.py  0003_remove_habit_creator_habit_owner.py  0004_habit_tg_id.py  0005_remove_habit_tg_id.py  0006_habit_date_time.py
users/: models.py  permissions.py  views.py
users/migrations/: 0001_initial.py  0002_user_tg_id.py
