[tool.poetry]
name = "atomic-habits-drf"
version = "0.1.0"
description = ""
authors = ["Krimsi13"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
djangorestframework-simplejwt = "^5.3.1"
celery = "^5.4.0"
redis = "^5.0.7"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
djangorestframework = "^3.15.2"
psycopg2 = "^2.9.9"
python-dotenv = "^1.0.1"
black = "^24.4.2"
setuptools = "^70.2.0"
django-celery-beat = "^2.6.0"
gevent = "^24.2.1"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
